Fix color problems with tutorial

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #9b1f32;
+  		background-color: #ffffff;
 		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
+  		color: #111111;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #64e0cd; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #0000dd; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #64e0cd; }
-    h3 { text-align: center; color: #64e0cd; }
-    a { color: #64e0cd; }
+		h2 { font-size: 1.5em; color: #0000dd; }
+    h3 { text-align: center; color: #0000dd; }
+    a { color: #0000dd; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
