--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 </head>
 
 <body>
-  <a href="http://github.com/cloudera/LearnAvro"><img style="position: absolute; top: 0; right: 0; border: 0;" src="./LearnAvro-tutorial_files/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+  <a href="http://github.com/cloudera/LearnAvro"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
   <div id="container">
 
     <div class="download">
       <a href="http://github.com/cloudera/LearnAvro/zipball/master">
-        <img border="0" width="90" src="./LearnAvro-tutorial_files/zip.png"></a>
+        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
       <a href="http://github.com/cloudera/LearnAvro/tarball/master">
-        <img border="0" width="90" src="./LearnAvro-tutorial_files/tar.png"></a>
+        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
     <h1><a href="http://github.com/cloudera/LearnAvro">LearnAvro</a>
